--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,12 +2,14 @@ name: CD - Deploy Hospital App to EC2
 
 on:
   workflow_run:
-    workflows: ["CI - Build and Push Hospital App Image"]
+    workflows:
+      - CI - Build and Push Hospital App Image
     types:
       - completed
 
 jobs:
   deploy:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
 
     steps:
@@ -18,6 +20,6 @@ jobs:
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            cd DB-Practice/SHREE_HOSPITAL
-            docker compose pull
-            docker compose up -d
+            cd /home/ubuntu/DB-Practice/SHREE_HOSPITAL
+            docker compose down
+            docker compose up -d --build
